--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             alt="presentacion" title="imagen de presentacion">
         <img src="image/DJs.webp" alt="DJs">
         <article>
-            <p>Soy Leonardo y estoy en el aprendizaje de HTML</p>
+            <p>Soy Leonardo y estoy en el aprendizaje de HTML, y se agregó el site al Github</p>
         </article>
 
         <aside>
