--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li> <a href="#sobre">Sobre Mi</a></li>
                 <li> <a href="#proyectos">Proyectos </a></li>
                 <li> <a href="#contactos">Contactos</a></li>
-                <li> <a href="https://google.com" target="_blank">Google</a></li>
+                <li> <a href="https://brave.com/es/search/" target="_blank">Motor de búsqueda Brave</a></li>
 
             </ul>
         </nav>
@@ -47,7 +47,7 @@
         </article>
     </section>
     <footer>
-        <p>Derechos reservados Leo</p>
+
         <section id="contactos">
             <h2>Contactos</h2>
             <p>Tiene alguna idea podemos desarrollarla</p>
@@ -59,8 +59,35 @@
         </section>
     </footer>
 
+    <br>
+    <br>
 
+    <form action="">
+        <label for="nome">Nome: </label>
+        <input type="text" id="nome" name="nome" required> <br>
 
+        <label for="Email">E-mail: </label>
+        <input type="email" id="email" name="email" required> <br>
+
+        <label for="Telefono">Teléfono: </label>
+        <input type="tel" id="Telefono" name="Telefono"> <br>
+
+        <label for="assunto">Assunto: </label>
+        <select name="assunto" id="assunto">
+            <option value="cotizacion">Cotización</option>
+            <option value="duda">Duda</option>
+            <option value="otro">Otro</option>
+        </select>
+        <br>
+        <label for="mensaje">Mensaje: </label>
+        <textarea name="mensaje" id="mensaje" cols="30" rows="10" required></textarea>
+        <br>
+
+        <input type="checkbox" id="suscripcion" name="suscripcion">
+        <label for="suscripcion">Desea recibir noticias? marque el recuadro</label>
+    </form>
+    <p>Derechos reservados Leo</p>
+    <br><br><br>
 
 </body>
 
