--- a/index.html
+++ b/index.html
@@ -40,6 +40,40 @@
 
         </aside>
     </section>
+
+    <section>
+        <h2>Habilidades y tecnologias</h2>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Tecnología</th>
+                    <th>Nivel</th>
+                    <th>Descripción</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>HTML</td>
+                    <td>Iniciante</td>
+                    <td>Eficiencia en el trabajo</td>
+                </tr>
+                <tr>
+                    <td>CSS</td>
+                    <td>Iniciante</td>
+                    <td>Aun no empiezo</td>
+                </tr>
+                <tr>
+                    <td>JavaScript</td>
+                    <td>Iniciante</td>
+                    <td>Aprendizaje posterior a CSS</td>
+                </tr>
+            </tbody>
+
+        </table>
+
+    </section>
     <section id="proyectos">
         <article>
             <h2>Proyectos</h2>
